Adding more constraints and test for depth correctness