@@ -1,5 +1,7 @@
 package kranji.json.dto;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 /**
@@ -7,7 +9,12 @@ import java.util.Map;
  *
  * @param style lowercase-snake style tag (e.g. {@code "left_right"},
  *              {@code "top_bottom"}, {@code "full_enclosure"}); required
- * @param slots slot-key → block-ref map; required; defensively copied.
+ * @param slots slot-key → block-ref map; required; defensively copied into
+ *              an order-preserving unmodifiable view so JSON output is
+ *              deterministic for callers that pass a {@link LinkedHashMap}.
+ *              {@link Map#copyOf} would lose insertion order (it returns
+ *              an {@code ImmutableCollections.MapN} whose iteration order
+ *              is randomized per JVM run).
  *              Expected key sets per style are defined in the loader validator.
  */
 public record ComposedBlockJson(
@@ -15,6 +22,8 @@ public record ComposedBlockJson(
         Map<String, BlockRefJson> slots
 ) {
     public ComposedBlockJson {
-        slots = slots == null ? Map.of() : Map.copyOf(slots);
+        slots = slots == null
+                ? Collections.emptyMap()
+                : Collections.unmodifiableMap(new LinkedHashMap<>(slots));
     }
 }
